Update INI code and add credits to Nyerguds in readme.md

--- a/RedAlertConfig.csproj
+++ b/RedAlertConfig.csproj
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Red Alert\</OutputPath>
+    <OutputPath>..\PortableRA\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -57,6 +57,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Nyerguds%27 INI class\BooleanMode.cs" />
+    <Compile Include="Nyerguds%27 INI class\IniFile.cs" />
+    <Compile Include="Nyerguds%27 INI class\IniSection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
